changed the 'Not Approved' to not be a button and removed event deletion

--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -63,13 +63,8 @@
                                             <li><a href="/event/duplicate/{{ form.id }}#page-title"
                                                    class="small btn btn-primary">Duplicate</a></li>
                                         {% else %}
-                                            <li><a class="small btn btn-primary">Not Approved</a></li>
+                                            <li>This announcement is pending approval.</li>
                                         {% endif %}
-
-                                        <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"
-                                               data-event-id="{{ form.id }}"
-                                               class="small btn btn-primary btn-alert delete-press"
-                                               data-toggle="modal" data-target="#myModal">Delete</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -85,46 +80,41 @@
                         <hr/>
                         <h3>Event Approver</h3>
                         <hr/>
+                        {% for form in event_approver_forms %}
+                            <div class="row">
+                                <div class="large-6 columns">
+                                    <p>
+                                        {% if form.is_published %}
+                                            <a href={{ form.path }}>{{ form.title }}</a>
+                                        {% else %}
+                                            {{ form.title }}
+                                        {% endif %}
+                                        <br/>
+                                        {% if form.is_published %}
+                                            <small>
+                                            <p>{{ form.dates | safe }}</p>
+                                            <a href={{ form.path }}>{{ form.path }}</a>
+                                            </small>
+                                        {% endif %}
+                                    </p>
+                                </div>
+                                <div class="large-6 columns small-3">
+                                    <ul class="button-group">
+                                        {% if form.is_published %}
+                                            <li><a href="{{ form.path }}" class="small button success">View</a></li>
+                                            <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a>
+                                            </li>
+                                            <li><a href="/event/duplicate/{{ form.id }}#page-title"
+                                                   class="small button">Duplicate</a></li>
+                                        {% else %}
+                                            <li>This announcement is pending approval.</li>
+                                        {% endif %}
+                                    </ul>
+                                </div>
+                                <hr/>
+                            </div>
+                        {% endfor %}
                     {% endif %}
-                    {% for form in event_approver_forms %}
-                        <div class="row">
-                            <div class="large-6 columns">
-                                <p>
-                                    {% if form.is_published %}
-                                        <a href={{ form.path }}>{{ form.title }}</a>
-                                    {% else %}
-                                        {{ form.title }}
-                                    {% endif %}
-                                    <br/>
-                                    {% if form.is_published %}
-                                        <small>
-                                        <p>{{ form.dates | safe }}</p>
-                                        <a href={{ form.path }}>{{ form.path }}</a>
-                                        </small>
-                                    {% endif %}
-                                </p>
-                            </div>
-                            <div class="large-6 columns small-3">
-                                <ul class="button-group">
-                                    {% if form.is_published %}
-                                        <li><a href="{{ form.path }}" class="small button success">View</a></li>
-                                        <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a>
-                                        </li>
-                                        <li><a href="/event/duplicate/{{ form.id }}#page-title"
-                                               class="small button">Duplicate</a></li>
-                                    {% else %}
-                                        <li><a class="small button success">Not Approved</a></li>
-                                    {% endif %}
-
-                                    <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"
-                                           data-event-id="{{ form.id }}"
-                                           class="small button alert delete-press">Delete</a></li>
-                                </ul>
-                            </div>
-                            <hr/>
-                        </div>
-                    {% endfor %}
-
                 </div>
 
                 <br/>
