--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -159,7 +159,7 @@
                 var input = $(d.getElementsByClassName('btn-save'));
                 input.attr('value', 'Save');
                 input.attr('type', 'button');
-                input.attr('id', 'redirect-add')
+                input.attr('id', 'redirect-add');
                 input.click(function () {
                     document.getElementById('redirect-add').disabled = true;
                     // when 'save' is clicked, gather the field mappings and send those
