--- a/tinker/office_hours/templates/office-hours-form.html
+++ b/tinker/office_hours/templates/office-hours-form.html
@@ -132,8 +132,8 @@
                                             - {{ field(class='time end auto-width hide-when-none') }}
                                         </div>
                                     </div>
-                                    <div class="col-sm-1">
-                                        <label>Closed?<input type="checkbox" class="hide-checkboxes"/></label>
+                                    <div class="col-sm-2">
+                                        <label><input type="checkbox" class="hide-checkboxes"/><span style="padding-left:1em;">Closed?</span></label>
                                     </div>
                                 </div>
                             {% else %}
