--- a/tinker/templates/creative_tim_footer.html
+++ b/tinker/templates/creative_tim_footer.html
@@ -7,7 +7,7 @@
                     <br/>
                     <div class="row">
                         <div class="large-6 columns">
-                            <p id="school-name">&copy; Bethel University -- <a href="/about">About</a></p>
+                            <p id="school-name">&copy; Bethel University</p>
                         </div>
                     </div>
                 </div>
