Fixed admin dropdown icons and *required* sizing

--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -371,7 +371,7 @@
     <fieldset class="date-fieldset">
         <div class="card">
             <div class="content">
-                <legend>Date 1</legend>
+                <legend>Date 1 <small class="required">required</small></legend>
 
                 <input class="alldaycheck" id="allday1" name="allday1" type="checkbox"
                        value="True">
