--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -1,6 +1,6 @@
 {% macro render() %}
 
-    <div class="sidebar-wrapper">
+    <div id="sidebar" class="sidebar-wrapper">
         <div class="logo">
             <a href="https://tinker.bethel.edu/" class="simple-text">
                 Tinker
@@ -47,24 +47,47 @@
             {% if 'Administrators' in session['groups'] or 'Tinker Redirects' in session['groups'] %}
                 <li class="dropdown {% if 'admin/' in request.path %}active{% endif %}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <i class="fa fa-menu"></i>
+                        <i class="fa fa-lightbulb-o"></i>
                         <p>Admin Menu &raquo;</p>
                     </a>
                     <ul class="dropdown-menu">
                         {% if 'Administrators' in session['groups'] %}
-                            <li><a href="/admin/publish-manager"><i class="fa fa-file" aria-hidden="true"></i>Publisher</a>
+                            <li>
+                                <a href="/admin/publish-manager">
+                                    <i class="fa fa-file" aria-hidden="true"></i>
+                                    <p class="admin-list-item">Publisher</p>
+                                </a>
                             </li>
-                            <li><a href="/admin/sync"><i class="fa fa-share-alt" aria-hidden="true"></i>Sync
-                                Metadata</a></li>
-                            <li><a href="/admin/blink-roles" class="button-nav"><i class="fa fa-users"
-                                                                                   aria-hidden="true"></i>Blink Layout
-                                Owners</a></li>
-                            <li><a href="/admin/program-search"><i class="fa fa-search" aria-hidden="true"></i>Program
-                                Search Tags</a></li>
+                            <li>
+                                <a href="/admin/sync">
+                                    <i class="fa fa-share-alt" aria-hidden="true"></i>
+                                    <p class="admin-list-item">Sync Metadata</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/admin/blink-roles" class="button-nav">
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <p class="admin-list-item">Blink Layout Owners</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/admin/program-search">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                    <p class="admin-list-item">Program Search Tags</p>
+                                </a>
+                            </li>
                         {% endif %}
-                        <li><a href="/admin/cache-clear"><i class="fa fa-recycle" aria-hidden="true"></i>Clear Cache</a>
+                        <li>
+                            <a href="/admin/cache-clear">
+                                <i class="fa fa-recycle" aria-hidden="true"></i>
+                                <p class="admin-list-item">Clear Cache</p>
+                            </a>
                         </li>
-                        <li><a href="/admin/redirect"><i class="fa fa-arrows-alt" aria-hidden="true"></i>Redirects</a>
+                        <li>
+                            <a href="/admin/redirect">
+                                <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                <p class="admin-list-item">Redirects</p>
+                            </a>
                         </li>
                     </ul>
                 </li>
