--- a/tinker/templates/index.html
+++ b/tinker/templates/index.html
@@ -22,20 +22,6 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="header">
-                        <h4 class="title">Faculty Bios</h4>
-                    </div>
-                    <div class="content">
-                        <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('faculty-bio.FacultyBioView:index') }}">
-                                <i class="fa fa-user fa-4x" aria-hidden="true" style='width:100%'></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="header">
                         <h4 class="title">Manage E-Announcements</h4>
                     </div>
                     <div class="content">
@@ -47,20 +33,39 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Manage Redirects</h4>
-                    </div>
-                    <div class="content">
-                        <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('redirects.RedirectsView:index') }}">
-                                <i class="fa fa-arrows-alt fa-4x" aria-hidden="true" style='width:100%'></i>
-                            </a>
+            {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] or 'Administrators' in session['groups'] %}
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="header">
+                            <h4 class="title">Faculty Bios</h4>
+                        </div>
+                        <div class="content">
+                            <div class="icon-big icon-warning text-center">
+                                <a href="{{ url_for('faculty-bio.FacultyBioView:index') }}">
+                                    <i class="fa fa-user fa-4x" aria-hidden="true" style='width:100%'></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {% endif %}
+
+            {% if 'Tinker Redirects' in session['groups'] or 'Administrators' in session['groups'] %}
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="header">
+                            <h4 class="title">Manage Redirects</h4>
+                        </div>
+                        <div class="content">
+                            <div class="icon-big icon-warning text-center">
+                                <a href="{{ url_for('redirects.RedirectsView:index') }}">
+                                    <i class="fa fa-arrows-alt fa-4x" aria-hidden="true" style='width:100%'></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
