Updated unit tests to work with the updated code from create-base-view
Note: redirects tests still don’t work in the browser interface.

--- a/tinker/unit_test_interface/templates/dashboard.html
+++ b/tinker/unit_test_interface/templates/dashboard.html
@@ -159,7 +159,7 @@
             <tbody id="to_update">
             {% for module in modules %}
                 <tr>
-                    <td>{{ module }}</td>
+                    <td><a href="/unit-test/{{ module }}">{{ module }}</a></td>
                     <td id="{{ module }}_succinct"></td>
                 </tr>
             {% endfor %}
