--- a/tinker/office_hours/templates/office-hours-confirm.html
+++ b/tinker/office_hours/templates/office-hours-confirm.html
@@ -8,7 +8,7 @@
             <div class="col-md-12">
                 <h1>Congrats!</h1>
                 <p>You've successfully updated your office's hours. You should see these changes reflected within the next business day, if applicable.</p>
-                <p>Thanks for submitting your new office's hours!</p>
+                <p>Thanks for submitting your office's new hours!</p>
             </div>
         </div>
     </div>
