Fixed many formatting issues

--- a/tinker/admin/program_search/templates/program-search-ajax.html
+++ b/tinker/admin/program_search/templates/program-search-ajax.html
@@ -21,7 +21,7 @@
         </span>
     </td>
     <td>
-        <span class="other">
+        <span class="program-other">
         {% if row.other %}
             X
         {% endif %}
