Changed spinner gif, minor changes to 'required' in forms

--- a/tinker/admin/blink_roles/templates/blink-roles-home.html
+++ b/tinker/admin/blink_roles/templates/blink-roles-home.html
@@ -1,6 +1,6 @@
 {% extends "tinker_base.html" %}
 
-{% block title %}Roles{% endblock %}
+{% set title = 'Roles' %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 {% block main_content %}
@@ -33,7 +33,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="col-md-12">
-                <h2> Blink Layout Owners </h2>
+                <h2 class="first-subtitle"> Blink Layout Owners </h2>
                 <table>
                     <colgroup>
                         <col width="33%" class="align-left">
