--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -62,7 +62,7 @@
                 </div>
                 {# spinner placeholder #}
                 <div id="spinner" class="spinner" style="display:none;">
-                    <img id="img-spinner" src="/get_image/waiting.gif" alt="Loading"/>
+                    <img id="img-spinner" src="https://cdn1.bethel.edu/images/load.gif" alt="Loading"/>
                 </div>
             </div>
         </div>
