--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -40,7 +40,9 @@
                                     <label class="checkbox-label">Short URL</label>
                                 </div>
                             </div>
-                            <div id="redirects-save" class="btn btn-primary">Save</div>
+                            <div id="redirects-save" class="btn
+                            btn-primary">Save
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -137,7 +139,8 @@
                 }
                 delay(function () {
                     loadTableForSearch(value, 'from_path');
-                    $('#spinner').hide(); }, 300);
+                    $('#spinner').hide();
+                }, 300);
             });
 
             $("#redirects-save").click(function () {
@@ -153,24 +156,21 @@
             });
 
             $(document).ready(function () {
-                var d = document;
-                var input = $(d.getElementsByClassName('btn-save'));
-                input.attr('value', 'Save');
-                input.attr('type', 'button');
-                input.attr('id', 'redirect-add');
-                input.click(function () {
-                    document.getElementById('redirect-add').disabled = true;
-                    // when 'save' is clicked, gather the field mappings and send those
-                    // to the wufoo-silva app for storage
-                    var fieldMappings = $(":input").serializeArray(),
-                            url = "{{ url_for('redirects.RedirectsView:new_redirect_submit') }}";
-                    $.post(url, fieldMappings, function (data) {
+
+                $('#redirects-save').click(function () {
+                    var data = {
+                        'new-redirect-from': $('#new-redirect-from').val(),
+                        'new-redirect-to': $('#new-redirect-to').val(),
+                        'short-url': $('#new-redirect-short-url').val(),
+                        'expiration-date': $('#expiration-date').val()
+                    };
+
+                    var url = "{{ url_for('redirects.RedirectsView:new_redirect_submit') }}";
+                    $.post(url, data, function (data) {
                         loadTableForSearch($('#new-redirect-from').val(), 'from_path');
-                        document.getElementById('redirect-add').disabled = false;
                     });
 
                 });
-                $("#redirect-add").append(input);
 
                 $(".btn-alert").click(function () {
                     var from_path = {"from_path": $(this).attr('data-delete-path')};
@@ -178,7 +178,6 @@
                     $.post(url, from_path, function (data) {
                         if (data) {
                             loadTableForSearch($("#new-redirect-from").val(), 'from_path');
-                            {#                            $("#confirmModal").foundation('reveal', 'close');#}
                         }
                     });
                 });
