--- a/tinker/e_announcements/templates/delete-confirm.html
+++ b/tinker/e_announcements/templates/delete-confirm.html
@@ -10,7 +10,7 @@
 
                 <p>
                     Your E-Announcements has been deleted. It will be removed from your <a
-                        href="{{ url_for('e-announcements.EAnnouncementsView:index') }}">Tinker homepage</a> in a few
+                        href="{{ url_for('e_announcements.EAnnouncementsView:index') }}">Tinker homepage</a> in a few
                     minutes.
                 </p>
             </div>
