--- a/tinker/templates/index.html
+++ b/tinker/templates/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('e-announcements.EAnnouncementsView:index') }}">
+                            <a href="{{ url_for('e_announcements.EAnnouncementsView:index') }}">
                                 <i class="fa fa-envelope-o fa-4x" aria-hidden="true" style='width:100%'></i>
                             </a>
                         </div>
@@ -41,7 +41,7 @@
                         </div>
                         <div class="content">
                             <div class="icon-big icon-warning text-center">
-                                <a href="{{ url_for('faculty-bios.FacultyBiosView:index') }}">
+                                <a href="{{ url_for('faculty_bios.FacultyBiosView:index') }}">
                                     <i class="fa fa-user fa-4x" aria-hidden="true" style='width:100%'></i>
                                 </a>
                             </div>
