--- a/tinker/e_announcements/templates/ea-home.html
+++ b/tinker/e_announcements/templates/ea-home.html
@@ -18,7 +18,7 @@
                     entered, newest dates first.
                 </p>
                 <hr/>
-                <a href="{{ url_for('e-announcements.EAnnouncementsView:new') }}" class="btn btn-primary new-btn">Submit
+                <a href="{{ url_for('e_announcements.EAnnouncementsView:new') }}" class="btn btn-primary new-btn">Submit
                     New
                     E-Announcement</a>
 
@@ -43,15 +43,15 @@
                                     {% else %}
                                         {% if not form.first_date_past and not form.second_date_past %}
                                             <li>
-                                                <a href="{{ url_for('e-announcements.EAnnouncementsView:edit', e_announcement_id=form.id) }}"
+                                                <a href="{{ url_for('e_announcements.EAnnouncementsView:edit', e_announcement_id=form.id) }}"
                                                    class="btn btn-primary">Edit</a></li>
                                         {% else %}
                                             <li>
-                                                <a href="{{ url_for('e-announcements.EAnnouncementsView:view', e_announcement_id=form.id) }}"
+                                                <a href="{{ url_for('e_announcements.EAnnouncementsView:view', e_announcement_id=form.id) }}"
                                                    class="btn btn-primary">View</a></li>
                                         {% endif %}
                                         <li>
-                                            <a href="{{ url_for('e-announcements.EAnnouncementsView:duplicate', e_announcement_id=form.id) }}"
+                                            <a href="{{ url_for('e_announcements.EAnnouncementsView:duplicate', e_announcement_id=form.id) }}"
                                                class="btn btn-primary">Duplicate</a></li>
                                         {% if not form.first_date_past %}
                                             <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"
