Fixed some formatting to work better with mobiles

--- a/tinker/admin/publish/templates/publish-home.html
+++ b/tinker/admin/publish/templates/publish-home.html
@@ -24,16 +24,16 @@
 
                         <form action="." id="publish-search-form">
 
-                            <div id="publish-first-col" class="col-sm-4">
+                            <div class="zero-left-padding col-sm-4">
                                 Search by Name:
                                 <input type="text" id="publish-search-by-name" class="form-control publish-search"/>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="zero-left-padding col-sm-4">
                                 Search by Content:
                                 <input type="text" id="publish-search-by-content"
                                        class="form-control publish-search"/>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="zero-left-padding col-sm-4">
                                 Search by Metadata:
                                 <input type="text" id="publish-search-by-metadata"
                                        class="form-control publish-search"/>
