--- a/tinker/admin/publish/templates/publish-more-info.html
+++ b/tinker/admin/publish/templates/publish-more-info.html
@@ -14,13 +14,13 @@
 
     <div class="row">
 
-        <div class="col-sm-6 last-published-header">
+        <div class="col-sm-6 zero-left-padding">
             <h4 class="first-subtitle">WWW last published</h4>
             <p><a href="https://www.bethel.edu/{{ path }}" target="_blank">{{ www_publish_date }}</a></p>
             <iframe src="https://www.bethel.edu/{{ path }}" height="400" width="400"></iframe>
         </div>
 
-        <div class="col-sm-6 last-published-header">
+        <div class="col-sm-6 zero-left-padding">
             <h4 class="first-subtitle">Staging last published</h4>
             <p><a href="https://staging.bethel.edu/{{ path }}" target="_blank">{{ staging_publish_date }}</a></p>
             <iframe src="https://staging.bethel.edu/{{ path }}" height="400" width="400"></iframe>
