Added preliminary factory creation lines
Committing to save progress. I’m going to switch back to unit-testing
to get the valid post forms that I’ll need, then fill it out
appropriately.

--- a/tinker/e_announcements/templates/delete-confirm.html
+++ b/tinker/e_announcements/templates/delete-confirm.html
@@ -9,7 +9,7 @@
             <div class="col-md-12">
 
                 <p>
-                    Your E-Announcements has been deleted. It will be removed from your <a
+                    Your E-Announcement has been deleted. It will be removed from your <a
                         href="{{ url_for('e_announcements.EAnnouncementsView:index') }}">Tinker homepage</a> in a few
                     minutes.
                 </p>
