--- a/tinker/unit_test_interface/templates/dashboard.html
+++ b/tinker/unit_test_interface/templates/dashboard.html
@@ -2,7 +2,7 @@
     <head>
         <title>Dashboard prototype</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <style>
             .modal-open {
                 overflow: hidden
